# xell-rusted

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
src/: main.rs
